add service prefix to the property

--- a/ms1.properties
+++ b/ms1.properties
@@ -1,3 +1,2 @@
-spring.application.name=micoservice1
-server.port=333
-message=Welcome MicroService
+ms1.name=micoservice1
+ms1.message=Welcome MicroService
