--- a/ms2-Dev.properties
+++ b/ms2-Dev.properties
@@ -1,3 +1,3 @@
-spring.application.name=micoservice2
-server.port=4441
-url=http://ms1:3331/serviceA/greeting
+ms2.name=micoservice2
+
+ms2.url=http://ms1:3331/serviceA/greeting
