--- a/ms1-Dev.properties
+++ b/ms1-Dev.properties
@@ -1,3 +1,2 @@
-spring.application.name=micoservice1
-server.port=3331
-message=Welcome MicroService Dev
+ms1.name=micoservice1
+ms1.message=Welcome MicroService Dev
