--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -1,3 +1,2 @@
-spring.application.name=micoservice1
-server.port=3332
-message=Welcome MicroService Prod
+ms1.name=micoservice1
+ms1.message=Welcome MicroService Prod
