--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -1,3 +1,2 @@
-spring.application.name=micoservice2
-server.port=4442
-url=http://ms1:3332/serviceA/greeting
+ms2.name=micoservice2
+ms2.url=http://ms1:3332/serviceA/greeting
