--- a/ms2.properties
+++ b/ms2.properties
@@ -1,3 +1,2 @@
-spring.application.name=micoservice2
-server.port=444
-url=http://ms1:333/serviceA/greeting
+ms2.name=micoservice2
+ms2.url=http://ms1:333/serviceA/greeting
