--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -1,9 +1,15 @@
-# Server port (default is 8761)
+# Server port
 server.port=8761
 
-# Eureka instance information
-eureka.instance.hostname=localhost
+# Disable registration and fetching of the registry
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 
-# Eureka server configuration
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
+# Instance configuration
+eureka.instance.hostname=localhost
+eureka.instance.instance-id=eureka-server
+eureka.instance.prefer-ip-address=true
+
+# Eureka server settings
+eureka.server.wait-time-in-ms-when-sync-empty=0
+eureka.server.enable-self-preservation=false
