--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -8,7 +8,7 @@ eureka.client.fetch-registry=false
 # Instance configuration
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=eureka-server
-eureka.instance.prefer-ip-address=true
+#eureka.instance.prefer-ip-address=true
 
 # Eureka server settings
 eureka.server.wait-time-in-ms-when-sync-empty=0
