--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -10,13 +10,14 @@ eureka.client.fetchRegistry=true
 
 # Eureka client configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-#eureka.instance.hostname=localhost
-eureka.instance.preferIpAddress=true
+eureka.instance.hostname=localhost
 
+
+eureka.instance.instance-id=eureka-server
 #application prefers to use its IP address instead
 # of its hostname when registering with the Eureka server
 # and when other applications attempt to communicate with it.
-
+#eureka.instance.preferIpAddress=true
 
 # app info configuration which will see it in the eureka dashboard
 info.app.name=ms1
