--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -1,15 +1,18 @@
 # Server port
 server.port=8072
 
-# enable registration and fetching of the registry
+# Whether the Eureka client is enabled (default: true)
+eureka.client.enabled=true
+
+# Whether to register this application with Eureka (default: true)
 eureka.client.register-with-eureka=true
+
+# Whether this client should fetch the registry information from Eureka server (default: true)
 eureka.client.fetch-registry=true
-eureka.instance.prefer-ip-address=true
 
-# Instance configuration
+# Eureka client configuration
+#eureka.client.service-url.defaultZone=http://local.config:8070/eureka/
+
+eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
 eureka.instance.hostname=localhost
-eureka.instance.instance-id=eureka-server
-eureka.instance.prefer-ip-address=true
-
-
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
