--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -11,8 +11,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # Eureka client configuration
-#eureka.client.service-url.defaultZone=http://local.config:8070/eureka/
+eureka.client.service-url.defaultZone=http://local.config:8070/eureka/
 
-eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.preferIpAddress=true
