--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -1,2 +1,37 @@
 ms2.name=micoservice2
 ms2.url=http://ms1:333/serviceA/greeting
+
+
+# Whether the Eureka client is enabled (default: true)
+eureka.client.enabled=true     
+# Whether to register this application with Eureka (default: true)
+eureka.client.registerWithEureka=true  
+# Whether this client should fetch the registry information from Eureka server (default: true)
+eureka.client.fetchRegistry=true     
+
+# Eureka client configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+eureka.instance.hostname=localhost
+
+
+eureka.instance.instance-id=eureka-server
+#application prefers to use its IP address instead
+# of its hostname when registering with the Eureka server
+# and when other applications attempt to communicate with it.
+#eureka.instance.preferIpAddress=true
+
+# app info configuration which will see it in the eureka dashboard
+info.app.name=ms2
+info.app.description=just demo micorservice connected with Eureka server 
+info.app.version=1.0.0
+
+# it allows you to shut down the application gracefully by
+# sending an HTTP POST request to /shutdown.
+# This endpoint is typically used for administrative purposes
+# to safely terminate the application.
+endpoint.shutdown.enable=true
+
+
+
+#it ensures that the /shutdown endpoint is exposed through the Actuator framework.
+management.endpoint.shutdown.enable=true
