Update and rename gateway.properties to gatewayserver.properties

--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -17,7 +17,7 @@ eureka.instance.hostname=localhost
 eureka.instance.preferIpAddress=true
 
 # app info configuration which will see it in the eureka dashboard
-info.app.name=ms1
+info.app.name=gatewayserver
 info.app.description=Description of Your Application
 info.app.version=1.0.0
 
