--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -9,9 +9,10 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true     
 
 # Eureka client configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
-eureka.instance.hostname=localhost
-
+#eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+eureka.client.serviceUrl.defaultZone=http://eurekaserver:8070/eureka/
+#eureka.instance.hostname=localhost
+eureka.instance.hostname=eurekaserver
 
 eureka.instance.instance-id=eureka-server
 #application prefers to use its IP address instead
