--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -9,9 +9,12 @@ eureka.client.registerWithEureka=true
 # Whether this client should fetch the registry information from Eureka server (default: true)
 eureka.client.fetchRegistry=true     
 
+
 # Eureka client configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
-eureka.instance.hostname=localhost
+#eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+eureka.client.serviceUrl.defaultZone=http://eurekaserver:8070/eureka/
+#eureka.instance.hostname=localhost
+eureka.instance.hostname=eurekaserver
 
 
 eureka.instance.instance-id=eureka-server
