--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -38,3 +38,35 @@ endpoint.shutdown.enable=true
 
 #it ensures that the /shutdown endpoint is exposed through the Actuator framework.
 management.endpoint.shutdown.enable=true
+
+#circuitbreaker
+#
+## backendA is the name of circuitbreaker annotation in api
+
+#enable check the circuitbreaker from actuator
+resilience4j.circuitbreaker.instances.backendA.registerHealthIndicator=true
+
+#check 5 request in order decide close or open status
+resilience4j.circuitbreaker.instances.backendA.minimumNumberOfCalls=5
+
+# from five check request above if 50% failed then set status open
+resilience4j.circuitbreaker.instances.backendA.failureRateThreshold=50
+
+# wait 30 sec in open stats then try to send a request to check if issue solved or not
+resilience4j.circuitbreaker.instances.backendA.waitDurationInOpenState=30000
+
+# in HalfOpenState try 2 request if not failed then go to close status
+resilience4j.circuitbreaker.instances.backendA.permittedNumberOfCallsInHalfOpenState=10
+
+
+# retry
+Rresilience4j.retry.configs.default.registerHealthIndicator=true
+Rresilience4j.retry.instances.backendA.maxAttempts=3
+Rresilience4j.retry.instances.backendA.waitDuration=5000
+
+
+#rate limiter
+resilience4j.ratelimiter.configs.default.registerHealthIndicator=true
+resilience4j.ratelimiter.instances.backendB.timeoutDuration=5000
+resilience4j.ratelimiter.instances.backendB.limitRefreshPeriod=5000
+resilience4j.ratelimiter.instances.backendB.limitForPeriod=1
