--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -1,5 +1,7 @@
 # Server port
 server.port=8070
+#config
+spring.config.import=configserver:http://configserver:8071/
 
 # Disable registration and fetching of the registry
 eureka.client.register-with-eureka=false
