--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -6,9 +6,12 @@ eureka.client.register-with-eureka=true
 # Whether this client should fetch the registry information from Eureka server (default: true)
 eureka.client.fetch-registry=true    
 
+#Config
+spring.config.import=configserver:http://configserver:8071/
+
 # Eureka client configuration
 eureka.client.service-url.defaultZone=http://eurekaserver:8070/eureka/
-eureka.instance.hostname=localhost
+eureka.instance.hostname=eurekaserver
 
 
 #application prefers to use its IP address instead
