--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -1,5 +1,5 @@
-ms2.name=micoservice2
-ms2.url=http://ms1:333/serviceA/greeting
+MS2.name=micoservice2
+MS2.url=http://ms1:333/serviceA/greeting
 
 
 # Whether the Eureka client is enabled (default: true)
