--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -1,5 +1,5 @@
-ms1.name=micoservice1
-ms1.message=Welcome MicroService Prod
+MS1.name=micoservice1
+MS1.message=Welcome MicroService Prod
 
 # Whether the Eureka client is enabled (default: true)
 eureka.client.enabled=true     
@@ -21,7 +21,7 @@ eureka.instance.instance-id=eureka-server
 eureka.instance.preferIpAddress=true
 
 # app info configuration which will see it in the eureka dashboard
-info.app.name=ms1
+info.app.name=MS1
 info.app.description=just demo micorservice connected with Eureka server 
 info.app.version=1.0.0
 
