--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -1,4 +1,4 @@
-MS1.name=micoservice1
+MS1.name=MS1
 MS1.message=Welcome MicroService Prod
 
 # Whether the Eureka client is enabled (default: true)
