--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -14,7 +14,7 @@ eureka.client.serviceUrl.defaultZone=http://eurekaserver:8070/eureka/
 #eureka.instance.hostname=localhost
 eureka.instance.hostname=eurekaserver
 
-eureka.instance.instance-id=eureka-server
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 #application prefers to use its IP address instead
 # of its hostname when registering with the Eureka server
 # and when other applications attempt to communicate with it.
