--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -14,7 +14,7 @@ eureka.client.fetchRegistry=true
 #eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
 eureka.client.serviceUrl.defaultZone=http://eurekaserver:8070/eureka/
 #eureka.instance.hostname=localhost
-eureka.instance.hostname=eurekaserver
+eureka.instance.hostname=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
 eureka.instance.instance-id=eureka-server
