--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -7,7 +7,7 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 # Instance configuration
-eureka.instance.hostname=localhost
+eureka.instance.hostname=eurekaserver
 eureka.instance.instance-id=eureka-server
 #eureka.instance.prefer-ip-address=true
 
