--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -1,4 +1,5 @@
 management.endpoints.web.exposure.include=info
+server.port=8033
 # Whether the Eureka client is enabled (default: true)
 eureka.client.enabled=true  
 # Whether to register this application with Eureka (default: true)
