--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -9,6 +9,7 @@ eureka.client.fetch-registry=false
 # Instance configuration
 eureka.instance.hostname=eurekaserver
 eureka.instance.instance-id=eureka-server
+server.context-path=/eureka
 #eureka.instance.prefer-ip-address=true
 
 # Eureka server settings
