--- a/gatewayserver-Prod.properties
+++ b/gatewayserver-Prod.properties
@@ -30,7 +30,8 @@ info.app.version=1.0.0
 # to safely terminate the application.
 endpoint.shutdown.enable=true
 
-
+# tell the gateway to go to the eurka server and get the all info service registration  details
+spring.cloud.gateway.discovery.locator.enabled=true
 
 # Eureka will expect that at least 85% of registered instances of a service should be sending heartbeats
 # regularly (according to the configured heartbeat interval) to consider the service healthy or the preservation mode will activate
