--- a/gatewayserver-Prod.properties
+++ b/gatewayserver-Prod.properties
@@ -1,3 +1,4 @@
+server.port=8072
 management.endpoints.web.exposure.include=info
 # Whether the Eureka client is enabled (default: true)
 eureka.client.enabled=true  
