--- a/gatewayserver-Prod.properties
+++ b/gatewayserver-Prod.properties
@@ -13,7 +13,11 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://eurekaserver:8070/eureka/
 eureka.instance.hostname=eurekaserver
 
+# Enable gateway actuator
+# to enable acuator/gateway  endpoint
+management.endpoint.gateway.enabled=true
 
+management.info.env.enabled = true
 #application prefers to use its IP address instead
 # of its hostname when registering with the Eureka server
 # and when other applications attempt to communicate with it.
