--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -30,6 +30,10 @@ info.app.version=1.0.0
 # to safely terminate the application.
 endpoint.shutdown.enable=true
 
+management.metrics.export.zipkin.enabled=true
+management.metrics.export.zipkin.base-url=http://Zipkin:9411
+management.metrics.export.zipkin.service-name=MS1
+
 
 
 #it ensures that the /shutdown endpoint is exposed through the Actuator framework.
