--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -67,3 +67,7 @@ resilience4j.ratelimiter.configs.default.registerHealthIndicator=true
 resilience4j.ratelimiter.instances.backendB.timeoutDuration=5000
 resilience4j.ratelimiter.instances.backendB.limitRefreshPeriod=5000
 resilience4j.ratelimiter.instances.backendB.limitForPeriod=1
+
+management.metrics.export.zipkin.enabled=true
+management.metrics.export.zipkin.base-url=http://Zipkin:9411
+management.metrics.export.zipkin.service-name=MS1
