--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -69,5 +69,8 @@ resilience4j.ratelimiter.instances.backendB.limitRefreshPeriod=5000
 resilience4j.ratelimiter.instances.backendB.limitForPeriod=1
 
 management.metrics.export.zipkin.enabled=true
-management.metrics.export.zipkin.base-url=http://Zipkin:9411
-management.metrics.export.zipkin.service-name=MS1
+management.metrics.export.zipkin.endpoint=http://zipkin:9411/api/v2/spans
+management.metrics.export.zipkin.service-name=MS2
+
+# Micrometer Tracing Sampling Probability
+management.tracing.sampling.probability=1.0
