--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -31,8 +31,11 @@ info.app.version=1.0.0
 endpoint.shutdown.enable=true
 
 management.metrics.export.zipkin.enabled=true
-management.metrics.export.zipkin.base-url=http://Zipkin:9411
+management.metrics.export.zipkin.endpoint=http://zipkin:9411/api/v2/spans
 management.metrics.export.zipkin.service-name=MS1
+
+# Micrometer Tracing Sampling Probability
+management.tracing.sampling.probability=1.0
 
 
 
