--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -30,12 +30,12 @@ info.app.version=1.0.0
 # to safely terminate the application.
 endpoint.shutdown.enable=true
 
-management.metrics.export.zipkin.enabled=true
-management.metrics.export.zipkin.endpoint=http://zipkin:9411/api/v2/spans
-management.metrics.export.zipkin.service-name=MS1
+#management.metrics.export.zipkin.enabled=true
+#management.metrics.export.zipkin.endpoint=http://zipkin:9411/api/v2/spans
+#management.metrics.export.zipkin.service-name=MS1
 
 # Micrometer Tracing Sampling Probability
-management.tracing.sampling.probability=1.0
+#management.tracing.sampling.probability=1.0
 
 
 
