--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -68,9 +68,9 @@ resilience4j.ratelimiter.instances.backendB.timeoutDuration=5000
 resilience4j.ratelimiter.instances.backendB.limitRefreshPeriod=5000
 resilience4j.ratelimiter.instances.backendB.limitForPeriod=1
 
-management.metrics.export.zipkin.enabled=true
-management.metrics.export.zipkin.endpoint=http://zipkin:9411/api/v2/spans
-management.metrics.export.zipkin.service-name=MS2
+#management.metrics.export.zipkin.enabled=true
+#management.metrics.export.zipkin.endpoint=http://zipkin:9411/api/v2/spans
+#management.metrics.export.zipkin.service-name=MS2
 
 # Micrometer Tracing Sampling Probability
-management.tracing.sampling.probability=1.0
+#management.tracing.sampling.probability=1.0
