--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -1,5 +1,5 @@
 MS2.name=MS2
-MS2.url=http://ms1:333/serviceA/greeting
+MS2.url=http://MS1:333/serviceA/greeting
 
 
 # Whether the Eureka client is enabled (default: true)
