--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -1,7 +1,7 @@
-MS2.name=MS2
-MS2.url=http://MS1:333/serviceA/greeting
+MS2.name=ms2
+MS2.url=http://ms1:333/serviceA/greeting
 
-url=http://MS1:333/serviceA/greeting
+url=http://ms1:333/serviceA/greeting
 # Whether the Eureka client is enabled (default: true)
 eureka.client.enabled=true     
 # Whether to register this application with Eureka (default: true)
