--- a/ms1-Prod.properties
+++ b/ms1-Prod.properties
@@ -1,6 +1,8 @@
 MS1.name=ms1
 MS1.message=Welcome MicroService Prod
 
+#actuator
+management.endpoints.web.exposure.include=*
 # Whether the Eureka client is enabled (default: true)
 eureka.client.enabled=true     
 # Whether to register this application with Eureka (default: true)
