--- a/ms2-Prod.properties
+++ b/ms2-Prod.properties
@@ -1,6 +1,8 @@
 MS2.name=ms2
 #MS2.url=http://ms1:333/serviceA/greeting
 
+#actuator
+management.endpoints.web.exposure.include=*
 #url=http://ms1:333/serviceA/greeting
 # Whether the Eureka client is enabled (default: true)
 eureka.client.enabled=true     
