--- a/gatewayserver-Prod.properties
+++ b/gatewayserver-Prod.properties
@@ -1,5 +1,6 @@
 server.port=8072
-management.endpoints.web.exposure.include=info
+#actuator
+management.endpoints.web.exposure.include=*
 # Whether the Eureka client is enabled (default: true)
 eureka.client.enabled=true  
 # Whether to register this application with Eureka (default: true)
